v8.3
-----
: Resolved another issue with the new currency detection function


v8.2.1
-----
: Fixed a bug in the new currency detection function

v8.2
-----
+ Significantly improved speed when getting data for app and profile pages and implemented client-side caching
+ Improved currency and country code detection for price history and regional price comparisons
+ Greatly reduced the number of requests required for retrieving currency conversion information
: Fixed an issue where the Enhanced Steam menu wasn't visible to users who weren't logged in to Steam
: Fixed a bug Valve created where wishlist "Links" dropdowns won't display correctly
: Moved price history on wishlists to the bottom of each entry to prevent elements shifting after data loads
: Updated app page purchase date to work with new account page layout

v8.1.1
-----
: Fixed a layout issue with regional price comparisons on sale pages
: Fixed a layout issue with All New Releases and Popular tabs on the homepage during sales
: Fixed a layout issue with some achievement progress bars not being displayed correctly

v8.1
-----
+ Added support for INR, TWD, HKD, SAR, ZAR, AED, CHF, CLP, PEN, COP, and CNY currencies
+ Added the Performance Survey section to the "Customize" button on app pages
: Updated regional price comparison feature to be more efficient and to work with new currencies
: Updated lowest price on market homepage to work with new API limitations - click each button for lowest price
: Fixed a layout issue with profile page links when using responsive design
: Fixed an issue where Early Access banners would incorrectly show on achievement showcases

v8.0.1
-----
: Fixed a bug that would cause users with less than 250 badges to not see badge calculations (thanks judgegr!)
: Fixed a bug that caused badge completion costs to not show correctly on badge pages
: Fixed a bug that caused the Enhanced Steam menu to be placed incorrectly due to a page layout change